Solved minor bugs in the database, added saving of images on SD